--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -1,12 +1,19 @@
-<title>Question: How does the Earth rotates...</title>
+<title>QA: {{question.text|truncatewords:5}}</title>
 <a href="/">Home</a><br>
 <br>
-$100<br>
+${{question.price}}<br>
 <br>
-blake8086@gmail.com:<br>
-How does the Earth rotates at about 1000 miles per hour since I are at the end of a pole attached to North Pole?<br>
+{{question.user.email}}:<br>
+<br>
+{{question.text}}<br>
 <br>
 Answers:
+{% for answer in answers %}
+	<hr>
+	<button>Mark this answer as correct</button><br>
+	{{answer.user.email}}:<br>
+	{{answer.text}}<br>
+{% endfor %}
 <hr>
 <form action="/question">
 	<textarea rows="12" cols="80">Type your answer here</textarea><br>
@@ -16,12 +23,4 @@ Answers:
 	By clicking on 'I agree' below you are agreeing to the <a href="/tos">Terms of Service</a>.<br>
 	<input type="submit" value="I agree. Post my answer."/>
 </form>
-<hr>
-<button>Mark this answer as correct</button><br>
-anotherdude@gmail.com:<br>
-More like how u get so fat?<br>
-<hr>
-<button>Mark this answer as correct</button><br>
-cutegirl@hotmail.com:<br>
-I have to say, it is what it is, be that as it may.<br>
 
