--- a/main/templates/questions.html
+++ b/main/templates/questions.html
@@ -1,9 +1,10 @@
+{% load markup %}
 <title>Unanswered Questions</title>
 <ul>
 	{% for question in questions %}
 		<li>
 			<h3>${{question.price}} <a href="/question/{{question.id}}">{{question.text|truncatewords:5}}</a></h1>
-			{{question.text}}<br>
+			{{question.text|markdown}}<br>
 			<i>{{question.answer__count}} answer{{question.answer__count|pluralize}}</i>
 		</li>
 	{% endfor %}
