--- a/main/templates/questions.html
+++ b/main/templates/questions.html
@@ -3,7 +3,7 @@
 <ul>
 	{% for question in questions %}
 		<li>
-			<h3>${{question.price}} <a href="/question/{{question.id}}">{{question.text|truncatewords:5}}</a></h1>
+			<h3>{% if question.is_answered %}&#x2713; {% endif %}${{question.price}} <a href="/question/{{question.id}}">{{question.text|truncatewords:5}}</a></h1>
 			{{question.text|markdown}}
 			<i>{{question.answer__count}} answer{{question.answer__count|pluralize}}</i>
 		</li>
