made templates inherit from base, basic nav, showing who is logged in

--- a/main/templates/answerEdit.html
+++ b/main/templates/answerEdit.html
@@ -1,13 +1,16 @@
+{% extends "base.html" %}
 {% load markup %}
-<title>QA: {{question.text|truncatewords:5}}</title>
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    	<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
-<a href="/">Home</a><br>
+{% block title %}QA: {{question.text|truncatewords:5}}{% endblock %}
+{% block messages %}
+	{% if messages %}
+	<ul class="messages">
+	    {% for message in messages %}
+	    	<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+	    {% endfor %}
+	</ul>
+	{% endif %}
+{% endblock %}
+{% block content %}
 <br>
 {% if question.is_answered %}&#x2713; {% endif %}${{question.price}}<br>
 <br>
@@ -24,3 +27,4 @@ Edit your answer:
 	<input type="submit" value="Save my changes">
 </form>
 <hr>
+{% endblock %}
