--- a/main/templates/tos.html
+++ b/main/templates/tos.html
@@ -1,5 +1,6 @@
-<title>Terms of Service</title>
-<a href="/">Home</a><br>
-<br>
-Terms of Service<br>
-blah blah blah
+{% extends "base.html" %}
+{% block title %}Terms of Service{% endblock %}
+{% block content %}
+	Terms of Service<br>
+	blah blah blah
+{% endblock %}
