--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1,3 +1,6 @@
-<title>Home</title>
-<a href="/ask">Ask</a><br>
-<a href="/questions">Answer</a><br>
+{% extends "base.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
+	<a href="/ask">Ask</a><br>
+	<a href="/questions">Answer</a><br>
+{% endblock %}
