--- a/main/templates/questionEdit.html
+++ b/main/templates/questionEdit.html
@@ -1,28 +1,31 @@
+{% extends "base.html" %}
 {% load markup %}
-<title>QA: {{question.text|truncatewords:5}}</title>
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
-<a href="/">Home</a><br>
-<br>
-{% if question.is_answered %}&#x2713; {% endif %}${{question.price}}<br>
-<br>
-{{question.user.email}}:<br>
-<br>
-<form method="POST">
-	{% csrf_token %}
-	<textarea name="text" rows="20" cols="80">{{question.text}}</textarea><br>
-	<input type="submit" value="Save my changes">
-</form>
-<br>
-Answers:
-{% for answer in answers %}
+{% block title %}QA: {{question.text|truncatewords:5}}{% endblock %}
+{% block messages %}
+	{% if messages %}
+	<ul class="messages">
+	    {% for message in messages %}
+	    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+	    {% endfor %}
+	</ul>
+	{% endif %}
+{% endblock %}
+{% block content %}
+	{% if question.is_answered %}&#x2713; {% endif %}${{question.price}}<br>
+	<br>
+	{{question.user.email}}:<br>
+	<br>
+	<form method="POST">
+		{% csrf_token %}
+		<textarea name="text" rows="20" cols="80">{{question.text}}</textarea><br>
+		<input type="submit" value="Save my changes">
+	</form>
+	<br>
+	Answers:
+	{% for answer in answers %}
+		<hr>
+		{% if answer.is_winner %}&#x2713; {% endif %}{{answer.user.email}}:<br>
+		{{answer.text|markdown}}<br>
+	{% endfor %}
 	<hr>
-	{% if answer.is_winner %}&#x2713; {% endif %}{{answer.user.email}}:<br>
-	{{answer.text|markdown}}<br>
-{% endfor %}
-<hr>
+{% endblock %}
