stubbed out tos a little

--- a/main/templates/tos.html
+++ b/main/templates/tos.html
@@ -2,5 +2,9 @@
 {% block title %}Terms of Service{% endblock %}
 {% block content %}
 	Terms of Service<br>
-	blah blah blah
+	<br>
+	Questions are owned by <b>Q</b>, we have unlimited reproduction rights.<br>
+	We have unlimited reproduction rights to answers.<br>
+	Answers are owned by <b>A</b>.<br>
+	<b>A</b>s agree to turn over all rights to answers when they are purchased by the <b>Q</b>.<br>
 {% endblock %}
