added more robust signup/signin form to q and a, partial implementation for q

--- a/main/templates/questions.html
+++ b/main/templates/questions.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load markup %}
-{% block title %}Unanswered Questions{% endblock %}
+{% block title %}Questions{% endblock %}
 {% block content %}
 <ul>
 	{% for question in questions %}
