--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -32,7 +32,7 @@
 		<form method="POST">
 			{{ answerForm.as_p }}
 			By clicking on 'I agree' below you are agreeing to the <a href="/tos">Terms of Service</a>.<br>
-			<input type="submit" value="I agree. Post my answer." />
+			<input type="submit" value="I agree. Post my answer" />
 			{% csrf_token %}
 		</form>
 	{% endif %}
