--- a/main/templates/ask.html
+++ b/main/templates/ask.html
@@ -2,7 +2,7 @@
 {% block title %}Ask a Question{% endblock %}
 {% block content %}
 	<form method="POST">
-		{{ form.as_p }}
+		{{ questionForm.as_p }}
 		By clicking on 'I agree' below you are agreeing to the <a href="/tos">Terms of Service</a>.<br>
 		<input type="submit" value="I agree. Post my question" />
 		{% csrf_token %}
