--- a/main/templates/ask.html
+++ b/main/templates/ask.html
@@ -7,4 +7,17 @@
 		<input type="submit" value="I agree. Post my question" />
 		{% csrf_token %}
 	</form>
+	<script>
+		function showHide() {
+			if ($('input[name=newUser]').attr('checked')) {
+				$('#id_email2').parent().show();
+				$('#id_password').parent().hide();
+			} else {
+				$('#id_email2').parent().hide();
+				$('#id_password').parent().show();
+			}
+		}
+		showHide();
+		$('#id_newUser_0,#id_newUser_1').live('click', showHide);
+	</script>
 {% endblock %}
