--- a/main/templates/tos.html
+++ b/main/templates/tos.html
@@ -3,8 +3,7 @@
 {% block content %}
 	Terms of Service<br>
 	<br>
-	Questions are owned by <b>Q</b>, we have unlimited reproduction rights.<br>
-	We have unlimited reproduction rights to answers.<br>
-	Answers are owned by <b>A</b>.<br>
+	Questions are owned by <b>Q</b>, we have unlimited reproduction rights to questions.<br>
+	Answers are owned by <b>A</b>, we have unlimited reproduction rights to answers.<br>
 	<b>A</b>s agree to turn over all rights to answers when they are purchased by the <b>Q</b>.<br>
 {% endblock %}
