slight fix to payment code, now barely works

--- a/main/templates/thanks.html
+++ b/main/templates/thanks.html
@@ -6,4 +6,5 @@ signatureMethod: {{getVars.signatureMethod}}<br><br>
 certificateUrl: {{getVars.certificateUrl}}<br><br>
 tokenID: {{getVars.tokenID}}<br><br>
 status: {{getVars.status}}<br><br>
-callerReference: {{getVars.callerReference}}
+callerReference: {{getVars.callerReference}}<br><br>
+result: {{result}}
