can now pay for a question

--- a/main/templates/thanks.html
+++ b/main/templates/thanks.html
@@ -1,10 +1,9 @@
 questionId: {{questionId}}<br><br>
-signature: {{getVars.signature}}<br><br>
-expiry: {{getVars.expiry}}<br><br>
-signatureVersion: {{getVars.signatureVersion}}<br><br>
-signatureMethod: {{getVars.signatureMethod}}<br><br>
-certificateUrl: {{getVars.certificateUrl}}<br><br>
-tokenID: {{getVars.tokenID}}<br><br>
-status: {{getVars.status}}<br><br>
-callerReference: {{getVars.callerReference}}<br><br>
+{% for key, value in getVars.items %}
+	{{ key }}: {{ value }}<br><br>
+{% endfor %}
+<hr>
+{% for key, value in payResponse.items %}
+	{{ key }}: {{ value }}<br><br>
+{% endfor %}
 result: {{result}}
