--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,7 +1,7 @@
 <title>{% block title %}{% endblock %}</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
 <div style="float: left">
-	<a href="/">Home</a> | <a href="/ask">Ask</a> | <a href="/questions">Answer</a>
+	<a href="/">Home</a> | <a href="/ask">Ask a Question</a>
 </div>
 <div style="float: right;">
 	{% if user.email %}
