--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,4 +1,5 @@
 <title>{% block title %}{% endblock %}</title>
+<link rel="shortcut icon" href="{{ MEDIA_URL }}/favicon.png" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
 <div style="float: left">
 	<a href="/">Home</a> | <a href="/ask">Ask a Question</a>
