--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,7 +1,9 @@
 <html>
 	<head>
 		<title>{% block title %}{% endblock %}</title>
-		<link rel="shortcut icon" href="{{ MEDIA_URL }}/favicon.png" />
+		<link rel="shortcut icon" href="{{ MEDIA_URL }}favicon.png" />
+		<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}base.css" />
+		<style>div#shadowSeparator { background-image:url({{ MEDIA_URL }}shadow.png); }</style>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
 	</head>
 	<body>
@@ -31,7 +33,12 @@
 			{% endif %}
 		</div>
 		<div style="clear: both;"></div>
-		<br>
-		{% block content %}{% endblock %}
+		<div id="header">
+			<a href="#"><img src="{{ MEDIA_URL }}logo.png"></a>
+		</div>
+		<div id="shadowSeparator"></div>
+		<div id="content">
+			{% block content %}{% endblock %}
+		</div>
 	</body>
 </html>
