--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -7,6 +7,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
 	</head>
 	<body>
+		<!--
 		<div style="float: left">
 			<a href="/">Home</a> | <a href="/ask">Ask a Question</a>
 		</div>
@@ -33,8 +34,9 @@
 			{% endif %}
 		</div>
 		<div style="clear: both;"></div>
+		-->
 		<div id="header">
-			<a href="#"><img src="{{ MEDIA_URL }}logo.png"></a>
+			<a href="/"><img src="{{ MEDIA_URL }}logo-120px-from-Inkscape.png"></a>
 		</div>
 		<div id="shadowSeparator"></div>
 		<div id="content">
