--- a/main/templates/questions.html
+++ b/main/templates/questions.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load markup %}
-{% block title %}Questions{% endblock %}
+{% block title %}code4cheap{% endblock %}
 {% block content %}
 	<style>
 		a.ask {
