stubbed out a footer

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -39,5 +39,8 @@
 		<div id="content">
 			{% block content %}{% endblock %}
 		</div>
+		<div id="footer">
+			<a href="http://twitter.com/code4cheap">@code4cheap on Twitter</a> &nbsp; <a href="http://www.facebook.com/pages/Code4cheap/201874853171539">code4cheap on Facebook</a>
+		</div>
 	</body>
 </html>
