--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -40,7 +40,10 @@
 			{% block content %}{% endblock %}
 		</div>
 		<div id="footer">
-			<a href="http://twitter.com/code4cheap">@code4cheap on Twitter</a> &nbsp; <a href="http://www.facebook.com/pages/Code4cheap/201874853171539">code4cheap on Facebook</a>
+			<a href="http://code4cheap.tumblr.com/">Blog</a> &nbsp; 
+			<a href="http://twitter.com/code4cheap">Twitter</a> &nbsp; 
+			<a href="http://www.facebook.com/pages/Code4cheap/201874853171539">Facebook</a> &nbsp; 
+			<a href="mailto:code4cheap@gmail.com">Contact</a>
 		</div>
 	</body>
 </html>
