--- a/main/templates/email/answererSignup.html
+++ b/main/templates/email/answererSignup.html
@@ -1,4 +1,4 @@
-Thanks for signing up with {{ SITE_NAME }}!<br>
+Thanks for signing up with code4cheap!<br>
 Your email is {{ email }} and your password is {{ password }}<br>
 You will need to activate your account before your answer becomes public.<br>
 <a href="{{ activateUrl }}">Click here to activate your account</a>
