--- a/main/templates/email/questionerSignup.html
+++ b/main/templates/email/questionerSignup.html
@@ -1,3 +1,3 @@
-Thanks for signing up with {{ SITE_NAME }}!<br>
+Thanks for signing up with code4cheap!<br>
 Your password is {{ password }}<br>
 <a href="{{ activateUrl }}">Click here to activate your account</a>
