added login stuff back into base template

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -9,16 +9,6 @@
 	<body>
 		<!--
 		<div style="float: right;">
-			{% if user.email %}
-				{{user.email}} | <a href="/logout">logout</a>
-			{% else %}
-				<form action="/login" method="POST">
-					{% csrf_token %}
-					<label for="email">email:</label> <input type="text" name="email">
-					<label for="password">password:</label> <input type="password" name="password">
-					<input type="submit" value="login">
-				</form>
-			{% endif %}
 		</div>
 		<div style="clear: both;"></div>
 		<div>
@@ -33,7 +23,22 @@
 		<div style="clear: both;"></div>
 		-->
 		<div id="header">
-			<a href="/"><img src="{{ MEDIA_URL }}logo-120px-from-Inkscape.png"></a>
+			<table style="width: 100%;"><tr>
+			<td width="33.3%"></td>
+			<td align="center" width="33.3%"><a href="/" style="width: 500px;"><img src="{{ MEDIA_URL }}logo-120px-from-Inkscape.png"></a></td>
+			<td align="right" width="33.3%" valign="top">
+				{% if user.email %}
+					{{user.email}} | <a href="/logout">logout</a>
+				{% else %}
+					<form action="/login" method="POST">
+						{% csrf_token %}
+						<label for="email">email:</label> <input type="text" name="email"><br>
+						<label for="password">password:</label> <input type="password" name="password"><br>
+						<input type="submit" value="login">
+					</form>
+				{% endif %}
+			</td>
+			</tr></table>
 		</div>
 		<div id="shadowSeparator"></div>
 		<div id="content">
