cleaned up a few pages

--- a/main/templates/ask.html
+++ b/main/templates/ask.html
@@ -49,7 +49,8 @@
    		{{ questionForm.non_field_errors }}
 		<div class="centered">
 			<div>{{ questionForm.text.errors }}</div>
-	        {{ questionForm.text.label_tag }}<br><br>
+	        {{ questionForm.text.label_tag }}<br>
+			<br>
 	        {{ questionForm.text }}
 		</div>
 		<div class="centered">
