rearranged and cleaned up css and static content

--- a/main/templates/ask.html
+++ b/main/templates/ask.html
@@ -96,7 +96,7 @@
 			{% csrf_token %}
 			<br>
 			<button type="submit" alt="Checkout with Amazon">
-				<img src="{{ MEDIA_URL }}amazonPayNow.gif">
+				<img src="{{ MEDIA_URL }}images/amazonPayNow.gif">
 			</button>
 		</div>
 	</form>
