--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -4,16 +4,16 @@
 		<title>{% block title %}{% endblock %}</title>
 		<link rel="shortcut icon" href="{{ MEDIA_URL }}favicon.png" />
 		{% slimall %}
-		<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}base.css" />
+			<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/base.css" />
 		{% endslimall %}
-		<style>div#shadowSeparator { background-image:url({{ MEDIA_URL }}shadow.png); }</style>
+		<style>div#shadowSeparator { background-image:url({{ MEDIA_URL }}images/shadow.png); }</style>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
 	</head>
 	<body>
 		<div id="header">
 			<table style="width: 100%;"><tr>
 			<td width="33.3%"></td>
-			<td align="center" width="33.3%"><a href="/" style="width: 500px;"><img src="{{ MEDIA_URL }}logo-120px-from-Inkscape.png"></a></td>
+			<td align="center" width="33.3%"><a href="/" style="width: 500px;"><img src="{{ MEDIA_URL }}images/logo-120px-from-Inkscape.png"></a></td>
 			<td align="right" width="33.3%" valign="top">
 				{% if user.email %}
 					{{user.email}} | <a href="/logout">logout</a>
