cleaned up fonts in css, added yahoo stuff

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>{% block title %}{% endblock %}</title>
 		<link rel="shortcut icon" href="{{ MEDIA_URL }}favicon.png" />
+		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssreset/reset-min.css">
+		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssfonts/fonts-min.css">
 		{% slimall %}
 			<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/base.css" />
 		{% endslimall %}
